# aoc2021

./: Cargo.toml  README.md
src/: day1.rs  day2.rs  day3.rs  lib.rs  main.rs
