[package]
name = "aoc2021"
version = "0.1.0"
authors = ["Levon Tarver <ask.levon@gmail.com>"]
edition = "2018"
description = "Solves Advent of Code 2021 puzzles"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
regex = "1"
