[package]
name = "aoc2021"
version = "0.2.0"
authors = ["Levon Tarver <ask.levon@gmail.com>"]
edition = "2021"
description = "Solves Advent of Code 2021 puzzles"
license = "MIT"
repository = "https://github.com/internet-diglett/aoc2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
regex = "1"
